# deemo

./: CMakeLists.txt  README.md  readme.md  table.sql
.CodeCounter/: details.md  results.md  results.txt
.VSCodeCounter/2022-05-06_19-17-11/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
etc/: database.conf  msgserver.conf  proxyserver.conf  redis.conf  registerserver.conf  routesever.conf  test.conf
pb/: BaseDefine.proto  Msg2Proxy.proto  Msg2Route.proto  RouteServer.proto  User.proto  create.sh  sync.sh
src/base/: CMakeLists.txt  ConcurrentHashmap.h  ConcurrentList.h  ConfigFileReader.cpp  ConfigFileReader.h  HashBucket.h  HashNode.h  Singleton.h  TcpSession.cpp  TcpSession.h  codec.cpp  codec.h  dispatcher.h  msg.h
src/base/database/: DatabaseConn.cpp  DatabaseConn.h  DatabaseMysql.cpp  DatabaseMysql.h  Field.cpp  Field.h  MysqlManager.cpp  MysqlManager.h  QueryResult.cpp  QueryResult.h
src/base/pb/protocol/: BaseDefine.pb.cc  BaseDefine.pb.h  Msg2Proxy.pb.cc  Msg2Proxy.pb.h  Msg2Route.pb.cc  Msg2Route.pb.h  RouteServer.pb.cc  RouteServer.pb.h  User.pb.cc  User.pb.h
src/base/redis/: RedisConn.cpp  RedisConn.h  RedisManager.cpp  RedisManager.h  RedisPool.cpp  RedisPool.h
src/base/tests/: CMakeLists.txt  ConcurrentHashMap_test.cpp  ConfigFileReader_test.cpp  DatabasePool_test.cpp  RedisPool_test.cpp  Singleton_test.cpp
src/client/: CMakeLists.txt  RegClient.cpp  RegClient.h  main.cpp
src/msg_server/: LoginClient.cpp  LoginClient.h  LoginClientManager.cpp  LoginClientManager.h  MsgServer.cpp  MsgServer.h  MsgSession.cpp  MsgSession.h  ProxyClient.cpp  ProxyClient.h  ProxyClientManager.cpp  ProxyClientManager.h  RouteClient.cpp  RouteClient.h  RouteClientManager.cpp  RouteClientManager.h  main.cpp
src/proxy_server/: BussinessLogic.cpp  BussinessLogic.h  CMakeLists.txt  ProxyServer.cpp  ProxyServer.h  ProxySession.cpp  ProxySession.h  UserManager.cpp  UserManager.h  main.cpp
src/register_server/: CMakeLists.txt  ProxyClient.cpp  ProxyClient.h  ProxyClientManager.cpp  ProxyClientManager.h  RegServer.cpp  RegServer.h  RegSession.cpp  RegSession.h  main.cpp
src/route_server/: MsgClient.cpp  MsgClient.h  MsgClientManager.cpp  MsgClientManager.h  MsgClientPool.cpp  MsgClientPool.h  RouteServer.cpp  RouteServer.h  RouteSession.cpp  RouteSession.h  UserManager.cpp  UserManager.h  main.cpp
